--- a/webtapp.html
+++ b/webtapp.html
@@ -33,7 +33,7 @@
     <progress value="0.5" max="1"></progress>
   </div>
   <hr>
-  <div class="pointq">Was the first serve in?</div>
+  <div class="pointq">Was the first serve in???</div>
   <div class="radio">
     <input type="radio" name="serveIn" value="servein"> Yes
     <input type="radio" name="serveIn" value="serveout"> No
@@ -750,6 +750,7 @@
       tm7.textContent = ''
       const tr7 = document.querySelector('.tr7');
       tr7.textContent = ''
+      returnbfmiddle()
     }
 
     function returnbf() {
@@ -757,7 +758,6 @@
       changeTitles("Return", "Points", "Games")
 
       returnbftop()
-      returnbfmiddle()
       returnbfbottom()
     }
     function wenbfbottom() {
