--- a/webtapp.html
+++ b/webtapp.html
@@ -969,7 +969,7 @@
       mr7.textContent = ''
     }
 
-    function adfbftop{
+    function adfbftop() {
       const tl1 = document.querySelector('.tl1');
       tl1.textContent = ''
       const tm1 = document.querySelector('.tm1');
@@ -1014,6 +1014,7 @@
       tr7.textContent = ''
       adfbfmiddle()
     }
+
     function adfbf() {
       statmode = 'Adf'
       changeTitles("Aces", "Double Faults", "Other")
