--- a/webtapp.html
+++ b/webtapp.html
@@ -219,6 +219,8 @@
     var match_done = false;
     var tiebreak = 0;
 
+    var choice = prompt("What is your favorite color?", "Red, Green, Blue");
+
     const dateDiv = document.querySelector('.date');
     dateDiv.textContent = dateDiv.textContent = new Intl.DateTimeFormat('en-US', {
       year: 'numeric',
