--- a/webtapp.html
+++ b/webtapp.html
@@ -217,6 +217,14 @@
       baces: 0,
       adfs: 0,
       bdfs: 0,
+      afirstpts: 0,
+      afirstwonpts: 0,
+      asecondpts: 0,
+      asecondwonpts: 0,
+      bfirstpts: 0,
+      bfirstwonpts: 0,
+      bsecondpts: 0,
+      bsecondwonpts: 0
     };
     var statmode = 'Overview'
 
@@ -478,11 +486,11 @@
       const tr2 = document.querySelector('.tr2');
       tr2.textContent = mstats.bdfs
       const tl3 = document.querySelector('.tl3');
-      tl3.textContent = ''
+      tl3.textContent = (mstats.afirstpts + mstats.asecondpts === 0) ? '-' : (100 * mstats.afirstpts / (mstats.afirstpts + mstats.asecondpts)).toFixed(2)
       const tm3 = document.querySelector('.tm3');
       tm3.textContent = '1st Serve %'
       const tr3 = document.querySelector('.tr3');
-      tr3.textContent = ''
+      tr3.textContent = (mstats.bfirstpts + mstats.bsecondpts === 0) ? '-' : (100 * mstats.bfirstpts / (mstats.bfirstpts + mstats.bsecondpts)).toFixed(2)
       const tl4 = document.querySelector('.tl4');
       tl4.textContent = ''
       const tm4 = document.querySelector('.tm4');
@@ -1058,8 +1066,36 @@
       return scorestr
     }
 
-    function makeStats(winner, event) {
+    function makeStats(winner, event, fsin) {
+      if (server === 'Player A') {
+        if (fsin === 'servein') {
+          mstats.afirstpts++;
+          if (winner === 'Awon') {
+            afirstwonpts++;
+          }
+        }
+        else {
+          mstats.asecondpts++;
+          if (winner === 'Awon') {
+            asecondwonpts++;
+          }
+        }
+      }
+      else {
+        if (fsin === 'servein') {
+          mstats.bfirstpts++;
+          if (winner === 'Bwon') {
+            bfirstwonpts++;
+          }
+        }
+        else {
+          mstats.bsecondpts++;
+          if (winner === 'Bwon') {
+            bsecondwonpts++;
+          }
+        }
 
+      }
       if (winner === 'Awon') {
         mstats.apoints++;
         switch (event) {
@@ -1190,10 +1226,11 @@
         return
       }
       div.textContent = makeScore();
-      const selected = document.querySelector('input[name="howwon"]:checked');
-      const selection = selected.value;
+      const selection = document.querySelector('input[name="howwon"]:checked').value;
+      const servein = document.querySelector('input[name="serveIn"]:checked').value;
+
       makePbp(winner, 0)
-      makeStats(winner, selection)
+      makeStats(winner, selection, servein)
 
       mstats.tpoints++;
     }
