--- a/webtapp.html
+++ b/webtapp.html
@@ -1234,6 +1234,7 @@
 
       makePbp(winner, 0)
       makeStats(winner, selection, servein)
+      confirm("Rat cat")
       div.textContent = makeScore();
 
     }
