--- a/webtapp.html
+++ b/webtapp.html
@@ -1071,13 +1071,13 @@
         if (fsin === 'servein') {
           mstats.afirstpts++;
           if (winner === 'Awon') {
-            afirstwonpts++;
+            mstats.afirstwonpts++;
           }
         }
         else {
           mstats.asecondpts++;
           if (winner === 'Awon') {
-            asecondwonpts++;
+            mstats.asecondwonpts++;
           }
         }
       }
@@ -1085,13 +1085,13 @@
         if (fsin === 'servein') {
           mstats.bfirstpts++;
           if (winner === 'Bwon') {
-            bfirstwonpts++;
+            mstats.bfirstwonpts++;
           }
         }
         else {
           mstats.bsecondpts++;
           if (winner === 'Bwon') {
-            bsecondwonpts++;
+            mstats.bsecondwonpts++;
           }
         }
 
