--- a/webtapp.html
+++ b/webtapp.html
@@ -24,7 +24,7 @@
 <body>
   <div class="score">Score</div>
   <div class="Players">
-    <span class="PlayerA">Player AA</span>
+    <span class="PlayerA">Player A</span>
     <span class="PlayerB">Player B</span>
   </div>
   <div class="date"> Date</div>
@@ -424,9 +424,9 @@
     function overviewbf() {
       changeTitles('Serve', 'Return', 'Total')
       statmode = 'Overview'
-
-      overviewbfbottom()
       overviewbftop()
+      overviewbfbottom()
+
 
     }
 
