--- a/webtapp.html
+++ b/webtapp.html
@@ -424,7 +424,7 @@
     function overviewbf() {
       changeTitles('Serve', 'Return', 'Total')
       statmode = 'Overview'
-      overviewbftop()
+      overviewtopbf()
       overviewbfbottom()
 
 
