--- a/webtapp.html
+++ b/webtapp.html
@@ -24,7 +24,7 @@
 <body>
   <div class="score">Score</div>
   <div class="Players">
-    <span class="PlayerA">Player AAA</span>
+    <span class="PlayerA">Player AA</span>
     <span class="PlayerB">Player B</span>
   </div>
   <div class="date"> Date</div>
@@ -423,9 +423,10 @@
     }
     function overviewbf() {
       changeTitles('Serve', 'Return', 'Total')
-      confirm("wtf is going on?")
+
       statmode = 'Overview'
       overviewtopbf()
+      confirm("wtf is going on?")
       overviewbfbottom()
 
 
