--- a/webtapp.html
+++ b/webtapp.html
@@ -423,7 +423,7 @@
       tm7.textContent = 'Service Points Won %'
       const tr7 = document.querySelector('.tr7');
       tr7.textContent = ((mstats.bfirstpts + mstats.bsecondpts) === 0) ? '-' : (100 * (mstats.bfirstwonpts + mstats.bsecondwonpts) / (mstats.bfirstpts + mstats.bsecondpts)).toFixed(2)
-      confirm("wtf is going on?")
+      //confirm("wtf is going on?")
       overviewbfmiddle()
     }
     function overviewbf() {
