--- a/webtapp.html
+++ b/webtapp.html
@@ -366,11 +366,11 @@
       changeValue('m7', '', '', '')
 
       const ml3 = document.querySelector('.ml3');
-      ml3.textContent = ((mstats.bfirstpts + mstats.bsecondpts) === 0) ? '-' : (100 * (mstats.bfirstwonpts + bsecondwonpts) / (mstats.bfirstpts + mstats.bsecondpts)).toFixed(2)
+      ml3.textContent = ((mstats.bfirstpts + mstats.bsecondpts) === 0) ? '-' : (100 * (mstats.bfirstwonpts + mstats.bsecondwonpts) / (mstats.bfirstpts + mstats.bsecondpts)).toFixed(2)
       const mm3 = document.querySelector('.mm3');
       mm3.textContent = 'Return Points Won %'
       const mr3 = document.querySelector('.mr3');
-      mr3.textContent = ((mstats.afirstpts + mstats.asecondpts) === 0) ? '-' : (100 * (mstats.afirstwonpts + asecondwonpts) / (mstats.afirstpts + mstats.asecondpts)).toFixed(2)
+      mr3.textContent = ((mstats.afirstpts + mstats.asecondpts) === 0) ? '-' : (100 * (mstats.afirstwonpts + mstats.asecondwonpts) / (mstats.afirstpts + mstats.asecondpts)).toFixed(2)
       const ml2 = document.querySelector('.ml2');
       ml2.textContent = (mstats.bsecondpts === 0) ? '-' : (100 * mstats.bsecondwonpts / (mstats.bsecondpts)).toFixed(2)
       const mm2 = document.querySelector('.mm2');
