--- a/webtapp.html
+++ b/webtapp.html
@@ -360,6 +360,7 @@
 
     }
     function overviewbfmiddle() {
+      confirm("wtf is going on?")
       changeValue('m4', '', '', '')
       changeValue('m5', '', '', '')
       changeValue('m6', '', '', '')
@@ -423,7 +424,7 @@
       tm7.textContent = 'Service Points Won %'
       const tr7 = document.querySelector('.tr7');
       tr7.textContent = ((mstats.bfirstpts + mstats.bsecondpts) === 0) ? '-' : (100 * (mstats.bfirstwonpts + mstats.bsecondwonpts) / (mstats.bfirstpts + mstats.bsecondpts)).toFixed(2)
-      //confirm("wtf is going on?")
+
       overviewbfmiddle()
     }
     function overviewbf() {
