--- a/webtapp.html
+++ b/webtapp.html
@@ -24,7 +24,7 @@
 <body>
   <div class="score">Score</div>
   <div class="Players">
-    <span class="PlayerA">Player AAA</span>
+    <span class="PlayerA">Player AA</span>
     <span class="PlayerB">Player B</span>
   </div>
   <div class="date"> Date</div>
@@ -360,11 +360,12 @@
 
     }
     function overviewbfmiddle() {
-      confirm("wtf is going on?")
+
       changeValue('m4', '', '', '')
       changeValue('m5', '', '', '')
       changeValue('m6', '', '', '')
       changeValue('m7', '', '', '')
+      confirm("wtf is going on?")
 
       const ml3 = document.querySelector('.ml3');
       ml3.textContent = ((mstats.bfirstpts + mstats.bsecondpts) === 0) ? '-' : (100 * (mstats.bfirstwonpts + mstats.bsecondwonpts) / (mstats.bfirstpts + mstats.bsecondpts)).toFixed(2)
