--- a/webtapp.html
+++ b/webtapp.html
@@ -25,7 +25,7 @@
   <div class="score">Score</div>
   <div class="Players">
     <span class="PlayerA">Player A</span>
-    <span class="PlayerB">Player B</span>
+    <span class="PlayerB">Player Ca</span>
   </div>
   <div class="date"> Date</div>
   <div class="server">Serving:</div>
@@ -362,9 +362,10 @@
     function overviewbfmiddle() {
 
       changeValue('m4', '', '', '')
-      confirm("wtf is going on?")
+
       changeValue('m5', '', '', '')
       changeValue('m6', '', '', '')
+      confirm("wtf is going on?")
       changeValue('m7', '', '', '')
 
 
