--- a/webtapp.html
+++ b/webtapp.html
@@ -156,9 +156,9 @@
         <td class="mr6"></td>
       </tr>
       <tr class="table-row">
-        <td class="tl7"></td>
-        <td class="tm7"></td>
-        <td class="tr7"></td>
+        <td class="ml7"></td>
+        <td class="mm7"></td>
+        <td class="mr7"></td>
       </tr>
 
     </table>
@@ -365,7 +365,7 @@
 
       changeValue('m5', '', '', '')
       changeValue('m6', '', '', '')
-      confirm("wtf is going on?")
+      //confirm("wtf is going on?")
       changeValue('m7', '', '', '')
 
 
